# helloaxum

./: Cargo.toml
migrations/: 20230724214855_create_users.sql
src/: main.rs  routing.rs  state.rs
src/routing/: api.rs
src/routing/api/: models.rs
