[package]
name = "helloaxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.19", features=["macros"]}
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = {version="1.29.1", features=["full"]}
tower = "0.4.13"
